Added dynamic symbol initialization on DB filling, updated documentation